crates/bevy_ecs/compile_fail/tests/ui/system_query_iter_lifetime_safety.rs
use bevy_ecs::prelude::*;

#[derive(Component)]
struct A(usize);

fn system(mut query: Query<&mut A>) {
    let mut iter = query.iter_mut();
    let a = &mut *iter.next().unwrap();

    let mut iter2 = query.iter_mut();
    //~^ E0499
    let _ = &mut *iter2.next().unwrap();

    println!("{}", a.0);
}
