crates/bevy_ecs/compile_fail/tests/ui/system_query_iter_lifetime_safety.stderr
error[E0499]: cannot borrow `query` as mutable more than once at a time
  --> tests/ui/system_query_iter_lifetime_safety.rs:10:21
   |
7  |     let mut iter = query.iter_mut();
   |                    ----- first mutable borrow occurs here
...
10 |     let mut iter2 = query.iter_mut();
   |                     ^^^^^ second mutable borrow occurs here
...
14 |     println!("{}", a.0);
   |                    --- first borrow later used here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0499`.
